# shop_app

./: alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0090fe5ad2ff_create_users_table.py  25d3c2536e27_create_products_table.py  b0c3268b2442_create_posts_table.py  b8fab3b92b28_create_profile_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  schemas.py  views.py
core/models/: __init__.py  base.py  db_helper.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
