[tool.poetry]
name = "microshop"
version = "0.1.0"
description = "FastApi shop"
authors = ["stereo <airstarview@gmail.com>"]
license = "MIT"
readme = "README.md"
 package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
pytest = "^8.3.4"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
